# safmc-d2-gazebo

./: CMakeLists.txt  README.md  package.xml
src/: PayloadSystem.cc  README.md
src/agent_msgs/: CMakeLists.txt  package.xml
src/agent_msgs/msg/: Magnet.msg  Payload.msg
src/payload_plugin/: CMakeLists.txt  package.xml
src/payload_plugin/src/: PayloadSystem.cc
src/payload_system/: CMakeLists.txt  package.xml
src/payload_system/payload_system/: PayloadSystem.cc
src/position_system/: CMakeLists.txt  package.xml
src/position_system/position_system/: PositionSystem.cc
